--- a/prueba.html
+++ b/prueba.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Select - Dependencias</title>
+  <meta charset="UTF-8">
+  <title>Tabla Expandible Animada</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+   /* Estilos para la tabla responsiva tipo tarjeta */
+@media (max-width: 767.98px) {
+  .table-custom thead {
+    display: none; /* Ocultamos los encabezados originales en móvil */
+  }
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  .table-custom tr {
+    display: block;
+    margin-bottom: 1rem;
+    border: 1px solid #dee2e6;
+    border-radius: .25rem;
+  }
 
-    <!-- Bootstrap Select CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/css/bootstrap-select.min.css" rel="stylesheet">
+  .table-custom td {
+    display: block;
+    text-align: right; /* Alineamos el dato a la derecha */
+    border: none;
+    border-bottom: 1px solid #dee2e6;
+    position: relative;
+    padding-left: 50%; /* Espacio para el label */
+  }
+
+  .table-custom td:last-child {
+    border-bottom: 0;
+  }
+
+  .table-custom td::before {
+    /* Usamos el atributo data-label para crear el "encabezado" */
+    content: attr(data-label);
+    position: absolute;
+    left: 0.5rem;
+    width: 45%;
+    padding-right: 0.5rem;
+    text-align: left;
+    font-weight: bold;
+  }
+}
+  </style>
 </head>
-<body>
-
-<div class="container mt-5">
-    <label for="" class="form-label">Dependencia</label>
-    <select class="selectpicker form-select" id="" data-live-search="true">
-        <option value="">Seleccione una dependencia</option>
-        <option value="1">Dependencia 1</option>
-        <option value="2">Dependencia 2</option>
-        <option value="3">Dependencia 3</option>
-    </select>
-</div>
-
-<!-- jQuery -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- Bootstrap Select JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
-
-<script>
-    $(document).ready(function () {
-        // Inicializa selectpicker
-        $('#dependenciaModalInventario').selectpicker();
-    });
-</script>
-
+<body class="container py-4">
+<table class="table">
+  <thead>
+    <tr>
+      <th>Nombre</th>
+      <th class="d-none d-md-table-cell">Email</th> <th class="d-none d-lg-table-cell">País</th> <th>Acciones</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Carlos</td>
+      <td class="d-none d-md-table-cell">carlos@email.com</td>
+      <td class="d-none d-md-table-cell">PABLO</td>
+      <td class="d-none d-md-table-cell">PABLO 2</td>
+      <td class="d-none d-md-table-cell">SASASASAS</td>
+      <td><button class="btn btn-primary btn-sm">Editar</button></td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
