--- a/index.html
+++ b/index.html
@@ -180,34 +180,52 @@
           </div>
           <div>
             <div class="container">
-              <div class="row">
-                <!-- Contenedor de 1/3 de ancho -->
-                <div class="col-4">
+              <div class="card">
+                <div class="card-body">
 
-                  <!-- Input 1 -->
-                  <div class="mb-3">
-                    <!-- Label para el dropdown -->
-                    <label for="selectSecciones" class="form-label">Selecciona una opción:</label>
-                    <select class="form-select" id="selectSecciones">
-                      <option selected disabled>-- Cargando opciones --</option>
-                    </select>
+                  <div class="row d-none d-md-flex">
+                    <div class="col-md-4">
+                      <div class="mb-3">
+                        <label for="selectSecciones" class="form-label fw-bold">Sección Documental:</label>
+                        <select class="form-select" id="selectSecciones">
+                          <option selected disabled>-- Cargando opciones --</option>
+                        </select>
+                      </div>
+                      <div class="mb-3">
+                        <button id="btnNuevaSerie" type="button" class="btn btn-primary btn-nueva-serie"
+                          data-bs-toggle="modal" data-bs-target="#modalSeries">
+                          Nueva Serie
+                        </button>
+                      </div>
+                    </div>
+                    <div class="col-md-8">
+                      <div class="mb-3">
+                        <label for="seccionObtenida" class="form-label fw-bold">Nombre de la Sección
+                          Seleccionada:</label>
+                        <input type="text" class="form-control seccion-obtenida-display" disabled
+                          placeholder="Selecciona una opción de la lista">
+                      </div>
+                    </div>
                   </div>
-
-                  <!-- Input 2 -->
-                  <div class="mb-3">
-                    <!-- Botón para abrir el modal -->
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalSeries"
-                      onclick="habilitarBotonGuardar()">
-                      Nueva Serie
-                    </button>
-                  </div>
-
-                </div>
-                <!-- Contenedor de 2/3 de ancho -->
-                <div class="col-8">
-                  <div class="mb-3">
-                    <label for="seccionObtenida" class="form-label">Sección:</label>
-                    <input type="text" class="form-control" id="seccionObtenida" disabled>
+                  <div class="d-md-none">
+                    <div class="mb-3">
+                      <label for="selectSeccionesMobile" class="form-label fw-bold">Sección Documental:</label>
+                      <select class="form-select" id="selectSeccionesMobile">
+                        <option selected disabled>-- Cargando opciones --</option>
+                      </select>
+                    </div>
+                    <div class="mb-3">
+                      <label for="seccionObtenidaMobile" class="form-label fw-bold">Nombre de la Sección
+                        Seleccionada:</label>
+                      <input type="text" class="form-control seccion-obtenida-display" id="seccionObtenidaMobile"
+                        disabled placeholder="Selecciona una opción de la lista">
+                    </div>
+                    <div class="mb-3">
+                      <button id="btnNuevaSerie" type="button" class="btn btn-primary btn-nueva-serie"
+                        data-bs-toggle="modal" data-bs-target="#modalSeries">
+                        Nueva Serie
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -223,8 +241,7 @@
                       <th>ID</th>
                       <th>Nombre</th>
                       <th>Código Sección</th>
-                      <th>Editar</th>
-                      <th>Eliminar</th>
+                      <th>Acción</th>
                     </tr>
                   </thead>
                   <tbody id="tabla-series"></tbody>
@@ -260,30 +277,27 @@
           </div>
           <div>
             <div class="container">
-              <div class="row">
-                <!-- Contenedor de 1/3 de ancho -->
-                <div class="col-4">
+              <div class="card">
+                <div class="card-body">
+                  <div class="row gy-3">
+                    <div class="col-12 col-md-4">
+                      <div class="mb-3">
+                        <label for="selectSeccionesCADIDO" class="form-label fw-bold">Sección Documental:</label>
+                        <select class="form-select" id="selectSeccionesCADIDO">
+                          <option selected disabled>-- Cargando opciones --</option>
+                        </select>
+                      </div>
+                    </div>
 
-                  <!-- Input 1 -->
-                  <div class="mb-3">
-                    <!-- Label para el dropdown -->
-                    <label for="selectSeccionesCADIDO" class="form-label">Selecciona una opción:</label>
-                    <select class="form-select" id="selectSeccionesCADIDO">
-                      <option selected disabled>-- Cargando opciones --</option>
-                    </select>
-                  </div>
+                    <div class="col-12 col-md-8">
+                      <div class="mb-3">
+                        <label for="seccionObtenidaCADIDO" class="form-label fw-bold">Nombre de la Sección
+                          Seleccionada:</label>
+                        <input type="text" class="form-control" id="seccionObtenidaCADIDO" disabled
+                          placeholder="Selecciona una opción de la lista">
+                      </div>
+                    </div>
 
-                  <!-- Input 2 -->
-                  <div class="mb-3">
-
-                  </div>
-
-                </div>
-                <!-- Contenedor de 2/3 de ancho -->
-                <div class="col-8">
-                  <div class="mb-3">
-                    <label for="seccionObtenidaCADIDO" class="form-label">Sección:</label>
-                    <input type="text" class="form-control" id="seccionObtenidaCADIDO" disabled>
                   </div>
                 </div>
               </div>
@@ -359,53 +373,55 @@
                 </div>
                 <div>
                   <div class="container">
-                    <div class="row">
-                      <!-- Contenedor de 1/3 de ancho -->
-                      <div class="col-4">
+    <div class="card">
+        <div class="card-body">
+            <div class="row gy-3">
 
-                        <!-- Input 1 -->
-                        <div class="mb-3">
-                          <!-- Label para el dropdown de las secciones -->
-                          <label for="selectSeccionesInventario" class="form-label">Selecciona una opción:</label>
-                          <select class="form-select" id="selectSeccionesInventario">
+                <div class="col-12 col-md-4">
+                    <div class="mb-3">
+                        <label for="selectSeccionesInventario" class="form-label fw-bold">Selecciona una Sección:</label>
+                        <select class="form-select" id="selectSeccionesInventario">
                             <option selected disabled>-- Cargando opciones --</option>
-                          </select>
-                          <br>
-                          <!-- Label para el dropdown del año -->
-                          <label for="selectAnioBusqueda" class="form-label">Selecciona el año:</label>
-                          <select class="form-select" id="selectAnioBusqueda">
+                        </select>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="selectAnioBusqueda" class="form-label fw-bold">Selecciona el Año:</label>
+                        <select class="form-select" id="selectAnioBusqueda">
                             <option selected disabled>-- Cargando opciones --</option>
-                          </select>
-                        </div>
+                        </select>
+                    </div>
 
-                        <!-- Botón de registrar Inventario -->
-                        <div class="mb-3">
-                          <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#modalInventario" onclick="limpiarModalInventario()">
-                            Registrar nuevo
-                          </button>
-                        </div>
+                    
+                </div>
 
-                      </div>
-                      <!-- Contenedor de 2/3 de ancho -->
-                      <div class="col-8">
-                        <div class="mb-3">
-                          <label for="seccionObtenidaInventario" class="form-label">Sección:</label>
-                          <input type="text" class="form-control" id="seccionObtenidaInventario" disabled>
-                        </div>
-                        <div class="mb-3">
-                          <!-- Label para el dropdown de Status-->
-                          <label for="selectStatusInventario" class="form-label">Status:</label>
-                          <select class="form-select" id="selectStatusInventario">
-                            <option selected>Todos</option>
+                <div class="col-12 col-md-8">
+                    <div class="mb-3">
+                        <label for="seccionObtenidaInventario" class="form-label fw-bold">Sección:</label>
+                        <input type="text" class="form-control" id="seccionObtenidaInventario" disabled>
+                    </div>
+                    
+                    <div class="mb-3">
+                        <label for="selectStatusInventario" class="form-label fw-bold">Status:</label>
+                        <select class="form-select" id="selectStatusInventario">
+                            <option selected value="Todos">Todos</option>
                             <option value="registro">Recepcionado</option>
                             <option value="tramite">En Trámite</option>
                             <option value="concluido">Concluido</option>
-                          </select>
-                        </div>
-                      </div>
+                        </select>
                     </div>
-                  </div>
+                </div>
+                <div class="col-12 d-flex justify-content-md-end">
+                  <div class="mb-3">
+                        <button id="btnRegistrarInventario" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalInventario">
+                            Registrar nuevo
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
                 </div>
                 <hr>
                 <div>
@@ -421,8 +437,7 @@
                             <th>No Expediente</th>
                             <th>Asunto</th>
                             <th>Status</th>
-                            <th>Editar</th>
-                            <th>Eliminar</th>
+                            <th>Acción</th>
                           </tr>
                         </thead>
                         <tbody id="tabla-inventario"></tbody>
@@ -644,10 +659,9 @@
         </div>
 
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
-            onclick="limpiarFormularioSeries()">Cancelar</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
           <button type="button" class="btn btn-primary" onclick="guardarSerie()" id="guardarBtnSerie">Guardar</button>
-          <button type="button" class="btn btn-primary" onclick="modificarSerie()"
+          <button type="button" class="btn btn-primary d-none" onclick="modificarSerie()"
             id="modificarBtnSerie">Modificar</button>
         </div>
       </div>
@@ -741,22 +755,17 @@
               <input type="text" class="form-control" id="asuntoModalInventario" required>
             </div>
             <!--Dependencias-->
-            <div class="row">
-              <div class="col-sm-9">
-                <div class="form-group">
-                  <select class="selectpicker form-control" data-live-search="true" data-style="btn-primary"
+            <div class="mb-3">
+              <select class="selectpicker form-control" data-live-search="true" data-style="btn-primary"
                     id="dependenciaModalInventario" name="dependencias" data-size="5">
                   </select>
-                </div>
-              </div>
-              <div class="col-sm-3"><button type="button" class="btn btn-success" id="btnAgregarDependencias">
-                  <i class="bi bi-plus-circle"></i> Agregar
-                </button></div>
-            </div>
-            <div class="mb-3">
-              <h5 class="mt-3">Lista de dependencias</h5>
+                  <button type="button" class="btn btn-success mt-2" id="btnAgregarDependencias">
+                  <i class="bi bi-plus-circle"></i> Agregar!!!
+                </button>
+                <h5 class="mt-3">Lista de dependencias</h5>
               <ul id="listaDependencias"></ul>
             </div>
+
 
             <!-- Tipo -->
             <div class="mb-3">
