--- a/prueba.html
+++ b/prueba.html
@@ -1,68 +1,88 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <title>Tabla Expandible Animada</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-   /* Estilos para la tabla responsiva tipo tarjeta */
-@media (max-width: 767.98px) {
-  .table-custom thead {
-    display: none; /* Ocultamos los encabezados originales en móvil */
-  }
+    /* Estilos para la tabla responsiva tipo tarjeta */
+    @media (max-width: 767.98px) {
+      .table-custom thead {
+        display: none;
+        /* Ocultamos los encabezados originales en móvil */
+      }
 
-  .table-custom tr {
-    display: block;
-    margin-bottom: 1rem;
-    border: 1px solid #dee2e6;
-    border-radius: .25rem;
-  }
+      .table-custom tr {
+        display: block;
+        margin-bottom: 1rem;
+        border: 1px solid #dee2e6;
+        border-radius: .25rem;
+      }
 
-  .table-custom td {
-    display: block;
-    text-align: right; /* Alineamos el dato a la derecha */
-    border: none;
-    border-bottom: 1px solid #dee2e6;
-    position: relative;
-    padding-left: 50%; /* Espacio para el label */
-  }
+      .table-custom td {
+        display: block;
+        text-align: right;
+        /* Alineamos el dato a la derecha */
+        border: none;
+        border-bottom: 1px solid #dee2e6;
+        position: relative;
+        padding-left: 50%;
+        /* Espacio para el label */
+      }
 
-  .table-custom td:last-child {
-    border-bottom: 0;
-  }
+      .table-custom td:last-child {
+        border-bottom: 0;
+      }
 
-  .table-custom td::before {
-    /* Usamos el atributo data-label para crear el "encabezado" */
-    content: attr(data-label);
-    position: absolute;
-    left: 0.5rem;
-    width: 45%;
-    padding-right: 0.5rem;
-    text-align: left;
-    font-weight: bold;
-  }
-}
+      .table-custom td::before {
+        /* Usamos el atributo data-label para crear el "encabezado" */
+        content: attr(data-label);
+        position: absolute;
+        left: 0.5rem;
+        width: 45%;
+        padding-right: 0.5rem;
+        text-align: left;
+        font-weight: bold;
+      }
+    }
   </style>
 </head>
+
 <body class="container py-4">
-<table class="table">
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th class="d-none d-md-table-cell">Email</th> <th class="d-none d-lg-table-cell">País</th> <th>Acciones</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Carlos</td>
-      <td class="d-none d-md-table-cell">carlos@email.com</td>
-      <td class="d-none d-md-table-cell">PABLO</td>
-      <td class="d-none d-md-table-cell">PABLO 2</td>
-      <td class="d-none d-md-table-cell">SASASASAS</td>
-      <td><button class="btn btn-primary btn-sm">Editar</button></td>
-    </tr>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Nombre</th>
+        <th class="d-none d-md-table-cell">Email</th>
+        <th class="d-none d-lg-table-cell">País</th>
+        <th>Acciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Carlos</td>
+        <td class="d-none d-md-table-cell">carlos@email.com</td>
+        <td class="d-none d-md-table-cell">PABLO</td>
+        <td class="d-none d-md-table-cell">PABLO 2</td>
+        <td class="d-none d-md-table-cell">SASASASAS</td>
+        <td><button class="btn btn-primary btn-sm">Editar</button></td>
+      </tr>
     </tbody>
-</table>
+  </table>
+
+  <div class="col-md-4">
+    <div class="mb-3">
+  <label for="selectBasico" class="form-label">Etiqueta de Ejemplo</label>
+  <select class="form-select" id="selectBasico" aria-label="Ejemplo de selector básico">
+    <option selected>Abre este menú de selección</option>
+    <option value="1">Opción Uno</option>
+    <option value="2">Opción Dos</option>
+    <option value="3">Opción Tres</option>
+  </select>
+</div>
+  </div>
 </body>
+
 </html>
